[metadata]
name = hood-option-pricer
version = 0.1.0
author = Stone Technologies
author_email = you@example.com
description = HOOD option pricing library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/yourorg/hood-option-pricer
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    numpy>=1.24
    pandas>=2.0
    scipy>=1.10
    yfinance==0.2.54
    curl-cffi>=0.9.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hood-pricer = hood_option_pricer.cli:main
